- GUI of maintenance - partially finished import logic

--- a/www/css/courses.css
+++ b/www/css/courses.css
@@ -23,8 +23,9 @@
 }
 
 #wrapper{
+	margin-left:auto;
+	margin-right:auto;
 	position: relative;
-	text-align: center;
 	width: 1000px;
 }
 
@@ -32,7 +33,7 @@
 {
 	text-align: right;
 	position: relative;
-	width:200px;
+	width:150px;
 	float: left;
 }
 #submenu li { padding:2px;}
@@ -40,7 +41,7 @@
 #content
 {
 	position: relative;
-	width:700px;
+	width:770px;
 	text-align: left;
 	float: left;
 	padding: 10px;
@@ -59,16 +60,34 @@ table.description{}
 table.description td { vertical-align:top;}
 table.description td.title { width:150px;}
 
+table.layout { width:100%; border:none;}
+table.layout tr { vertical-align:top;}
+table.layout td { padding: 2px;}
+table.layout td.separator { width:7px;}
+
+table.inputlayout { width: 100%; border: none;}
+table.inputlayout tr {vertical-align: middle;}
+table.innerlayout { width: 100%; border: none; margin: none;}
+table.innerlayout td { padding: 0px; border-spacing: 0px; border-collapse: collapse; margin:none; }
+
+table.disptable { border-collapse: collapse; border: 1px solid #afaeb2;}
+table.disptable td{ padding:2px; text-align:center; border: 1px solid #afaeb2;}
+table.disptable th{ font-weight:bold; padding:2px; text-align:center; border: 1px solid #afaeb2;}
+
 li
 {
  list-style: none;
 }
 
+/* buttons */
 a.reload {position:relative; cursor: pointer; display:block; width: 22px; height:20px; background: url(../images/reload.gif);}
 a.reload:hover {background: url(../images/reload.on.gif);}
 
 a.find {position:relative; cursor: pointer; display:block; width: 19px; height: 21px; background: url(../images/find.gif);}
 a.find:hover {background: url(../images/find.on.gif);}
+
+a.select {position:relative; cursor: pointer; display:block; width: 14px; height: 13px; background: url(../images/select.gif);}
+a.select:hover {background: url(../images/select.on.gif);}
 
 div.popupmenu
 {
@@ -85,3 +104,30 @@ div.popupmenu
 	text-align: center;
 }
 div.popupmenu a {position: relative; display: block;}
+
+div.selector
+{
+	width:100%;
+	height: 440px;
+	border: solid 1px #000;
+	margin-bottom: 5px;
+	overflow: auto;
+}
+div.selector li {margin: 3px; display: block; min-width: 50px;}
+div.selector li.selected {border: solid 1px purple;}
+
+/* button field for editors */
+div.buttonfield
+{
+	width:100%;
+	text-align: right;
+}
+div.buttonfield a.savebtn {cursor: pointer; margin-left: 5px; float: right; display:block; width: 16px; height:16px; background: url(../images/save.gif);}
+div.buttonfield a.deletebtn {cursor: pointer; margin-left: 5px; float: right; display:block; width: 13px; height:16px; background: url(../images/delete.gif);}
+div.buttonfield a.deletebtn:hover {background: url(../images/delete.on.gif);}
+div.buttonfield a.addbtn {cursor: pointer; float: right; margin-left: 5px; display:block; width: 16px; height:16px; background: url(../images/add.gif);}
+div.buttonfield a.refreshbtn {cursor: pointer; margin-left: 5px; float: right; display:block; width: 15px; height: 16px; background: url(../images/refresh.gif);}
+
+img.btn {cursor: pointer; margin-left: 5px; }
+
+input[type=text].date {width:90px;}
