--- a/www/css/main.css
+++ b/www/css/main.css
@@ -8,4 +8,4 @@ select { font: 9pt verdana; width: 200px;}
 
 h4 { color: #5a5b5b; font-size: 11px; font-weight: bold; margin-bottom: 5px; border-bottom: none !important; letter-spacing: 1px;text-transform: uppercase; margin-top: 5px;}
 
-embed {z-index:1}
+ol li {list-style:decimal}
