--- a/www/css/courses.css
+++ b/www/css/courses.css
@@ -8,18 +8,8 @@
 	height: 50px;
 	padding: 2px;
 	background-color: #fff;
-	z-index: 100;
+	z-index: 30;
 	text-align: left;
-}
-
-#searchbar input
-{
-	margin-top: 5px;
-	font: 9pt verdana;
-	border: #000 1px solid;
-	background-color: #ffffff;
-	height: 20px;
-	vertical-align:middle;
 }
 
 #wrapper{
@@ -117,10 +107,12 @@ div.popupmenu
 	float: right;
 	z-index: 100;
 	border: solid 1px #000;
-	width: 90px;
+	width: 100px;
 	text-align: center;
 }
-div.popupmenu a {position: relative; display: block;}
+div.popupmenu a {position: relative; display: block;padding:2px; background: #5970B2;color: #FFF; cursor:pointer;text-decoration: none;}
+div.popupmenu a:hover{	background: #49A3FF;}
+
 
 div.selector
 {
@@ -148,3 +140,6 @@ div.buttonfield a.refreshbtn {cursor: pointer; margin-left: 5px; float: right; d
 img.btn {cursor: pointer; margin-left: 5px; }
 
 input[type=text].date {width:90px;}
+
+#grayout {position:fixed;top:0px;left:0px;overflow:hidden;display:none;width:100%;height:100%;background-color:#000000;opacity:0.5;MozOpacity:0.5;z-index:500;filter:alpha(opacity=50);text-align:center}
+.grayout_dialog {text-align:center;position:absolute;width:350px;background-color:white;color:black;padding:10px;z-index:1000;top:120px;left:350px;display:none}
