--- a/www/css/form.css
+++ b/www/css/form.css
@@ -1,10 +1,4 @@
 @CHARSET "ISO-8859-1";
-.fbuttons{
- width: auto;
-  background-color: white;
-  cursor: pointer;
-  border: solid 1px black;
-  color: black;
-  text-decorations: none;
-
-}   
+input.fbuttons{
+	font-size: 10pt;
+}
