--- a/www/css/main.css
+++ b/www/css/main.css
@@ -20,18 +20,18 @@ form label{font: inherit;width:auto;display:inline;}
 
 div.search_block {
 	border: 1px solid gray;
-	background-color: threedface; 
+	background-color: #EAEDF4; 
 	padding: 5px; 
 	margin:0 5px 0 5px;
-	-moz-border-radius: 5px 5px 5px 5px;
-	-webkit-border-radius: 5px 5px 5px 5px;
+	/*-moz-border-radius: 5px 5px 5px 5px;
+	-webkit-border-radius: 5px 5px 5px 5px;*/
 }
 div.search_block p.title {float:left; padding-right: 10px; font-size:16px; font-weight:bold; }
 div.search_block div.title_bar { 
 	background-color: #5970B2;
 	color: #fff;
-	-moz-border-radius: 5px 5px 0 0;
-	-webkit-border-radius: 5px 5px 0 0;
+	/*-moz-border-radius: 5px 5px 0 0;
+	-webkit-border-radius: 5px 5px 0 0;*/
 	margin: -5px -5px 5px -5px;
 	padding-left: 5px;
 }
@@ -39,18 +39,18 @@ div.search_block div.title_bar {
 div.critique_block {border-top: 1px solid #EEEEEE; padding:7px 0 0 0; margin: 0 5px 15px 5px}
 div.critique_block div.box {
 	margin:5px 0 0 0;
-	background-color:threedface;
+	background-color:#EAEDF4;
 	border: 1px solid gray;
 	padding: 5px; 
-	-moz-border-radius: 5px 5px 5px 5px;
-	-webkit-border-radius: 5px 5px 5px 5px;
+	/*-moz-border-radius: 5px 5px 5px 5px;
+	-webkit-border-radius: 5px 5px 5px 5px;*/
 }
 div.critique_block div.box div.title_bar { 
 	background-color: #5970B2;
 	color: #fff;
-	-moz-border-radius: 5px 5px 0 0;
-	-webkit-border-radius: 5px 5px 0 0;
-	margin: -5px -5px 5px -5px;
+	/*-moz-border-radius: 5px 5px 0 0;
+	-webkit-border-radius: 5px 5px 0 0;*/
+	margin: -4px -4px 5px -4px;
 	padding-left: 5px;
 }
 
@@ -170,6 +170,7 @@ input[type=text].date {width:90px;}
 
 #grayout {position:fixed;top:0px;left:0px;overflow:hidden;display:none;width:100%;height:100%;background-color:#000000;opacity:0.5;MozOpacity:0.5;z-index:500;filter:alpha(opacity=50);text-align:center}
 div.grayout_dialog {
+	border: 1px solid gray;
 	text-align:center;
 	position:absolute;
 	width:350px;
@@ -180,15 +181,15 @@ div.grayout_dialog {
 	top:120px;
 	left:500px;
 	display:none;
-	-moz-border-radius: 5px 5px 5px 5px;
-	-webkit-border-radius: 5px 5px 5px 5px;
+	/*-moz-border-radius: 5px 5px 5px 5px;
+	-webkit-border-radius: 5px 5px 5px 5px;*/
 }
 div.grayout_dialog div.title_bar {
 	background-color: #5970B2;
 	color: #fff;
-	-moz-border-radius: 5px 5px 0 0;
-	-webkit-border-radius: 5px 5px 0 0;
-	margin: -10px -10px 5px -10px;
+	/*-moz-border-radius: 5px 5px 0 0;
+	-webkit-border-radius: 5px 5px 0 0;*/
+	margin: -9px -9px 5px -9px;
 	padding-left: 5px;
 	font-size: 14px;
 }
